[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/material/ui/UIFocus.tres" type="Material" id=1]
[ext_resource path="res://scenes/ui/menu/core/form/item/UIMenuFormItem.gd" type="Script" id=2]
[ext_resource path="res://assets/sound/ui/select-previous.wav" type="AudioStream" id=3]

[node name="UIMenuFormItem" type="MarginContainer" groups=["input-line"]]
anchor_right = 1.0
margin_bottom = 42.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 42.0
mouse_filter = 2

[node name="Input" type="MarginContainer" parent="VBox"]
margin_right = 1024.0
margin_bottom = 42.0
mouse_filter = 2

[node name="Margin" type="MarginContainer" parent="VBox/Input"]
margin_right = 1024.0
margin_bottom = 42.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 20
custom_constants/margin_bottom = 5

[node name="Line" type="HBoxContainer" parent="VBox/Input/Margin"]
margin_left = 20.0
margin_top = 5.0
margin_right = 1004.0
margin_bottom = 37.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBox/Input/Margin/Line"]
margin_right = 984.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 7
text = "label_input"
valign = 1

[node name="Overlay" type="ColorRect" parent="VBox/Input"]
visible = false
material = ExtResource( 1 )
margin_right = 1024.0
margin_bottom = 42.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enter" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Sfx"

[connection signal="gui_input" from="." to="." method="_on_UIMenuFormItem_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_UIMenuFormItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_UIMenuFormItem_mouse_exited"]
